--- a/booking-microservice-prod.yml
+++ b/booking-microservice-prod.yml
@@ -6,3 +6,7 @@ spring:
       ddl-auto: update
     show-sql: true
     generate-ddl: true
+  datasource:
+    url: jdbc:mysql://localhost:3306/bookingdb
+    username: root
+    password:
